resources/do-not-delete-resources/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    apps.open-cluster-management.io/do-not-delete: 'true'
  name: hello-simon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-simon
  template:
    metadata:
      labels:
        app: hello-simon
    spec:
      containers:
      - name: hello-simon
        image: paulbouwer/hello-kubernetes:1.8
        ports:
        - containerPort: 8080
