resources/do-not-delete-resources/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    apps.open-cluster-management.io/do-not-delete: 'true'
  name: hello-simon
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-simon
